# morge

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  debug.txt  design.md
doc/: morge_ch.md  morge_en.md
examples/: abigen.rs.bk  contract.sol  contract_abi.json  deploy.rs.bk  mod.rs.bk
src/: args.rs  config.rs  contract.rs  deploy.rs  executer.rs  lib.rs  main.rs  multi_task.rs  utils.rs  verify.rs
src/examples/: abigen.rs  deploy.rs  mod.rs
src/utils/: fs.rs  mod.rs  parse.rs
