[package]
name = "morge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
tokio = { version = "1.19.2", features = ["full"] }
eyre = "0.6"
rand = "0.8.5"
serde_json = "1.0.67"
serde = "1.0.133"
futures = { version = "0.3.0", features = ["thread-pool"]}
once_cell = "1.5.2"
clap = { version = "3.2.4", features = ["derive"] }

# clap = {version = "~2.27.0", features = ["yaml"]}
clap_complete = "3.0.4"

# log
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
tracing = "0.1.26"
