[package]
name = "morge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# network & async libs
ethers = { git = "https://github.com/gakonst/ethers-rs" }
tokio = { version = "1.19.2", features = ["full"] }
futures = { version = "0.3.0", features = ["thread-pool"]}

# serilezation && deserilezation
serde_json = "1.0.67"
serde = "1.0.133"

once_cell = "1.5.2"
eyre = "0.6"
rand = "0.8.5"

# arg parser
clap = { version = "3.2.4", features = ["derive"] }
clap_complete = "3.0.4"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

# log
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
tracing = "0.1.26"

