[package]
name = "morge"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# network & async libs
ethers = "0.13.0"
tokio = { version = "1.19.2", features = ["full"] }
futures = { version = "0.3.0", features = ["thread-pool"]}

# serilezation && deserilezation
serde_json = "1.0.67"
serde = "1.0.133"

once_cell = "1.5.2"
eyre = "0.6"
rand = "0.8.5"

# arg parser
clap = { version = "3.2.4", features = ["derive"] }
clap_complete = "3.0.4"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

# log
log = "0.4.17"
env_logger = "0.8.4"
log4rs = "1.1.1"

# date and time lib
chrono = "0.4"
